--- a/config/services.yaml
+++ b/config/services.yaml
@@ -4,6 +4,10 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
+    database_host: "localhost"
+    database_user: "root"
+    database_password: ""
+    database_name: "users"
 
 services:
     # default configuration for services in *this* file
