--- a/config/services.yaml
+++ b/config/services.yaml
@@ -4,10 +4,10 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
-    database_host: "localhost"
-    database_user: "root"
-    database_password: ""
-    database_name: "users"
+    database_host: "185.172.156.6"
+    database_user: "postgres"
+    database_password: "postgres"
+    database_name: "Main"
 
 services:
     # default configuration for services in *this* file
