--- a/.github/workflows/symfony.yml
+++ b/.github/workflows/symfony.yml
@@ -59,9 +59,9 @@ jobs:
       # - name: Analyses PHP Code (PHP Mess Detector)
       #  run: vendor/bin/phpmd src,tests text .phpmd-ruleset.xml
 
-      # https://github.com/phpstan/phpstan
-      - name: Analyse PHP Code (PHPStan)
-        run: vendor/bin/phpstan analyse src
+#       # https://github.com/phpstan/phpstan
+#       - name: Analyse PHP Code (PHPStan)
+#         run: vendor/bin/phpstan analyse src
 
       - name: Cache node_modules
         uses: actions/cache@v1
